[package]
name = "cube_library_development_toolbox"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26"
strum_macros = "0.26.3"